# mausify

./: README.md  demo.py  pyproject.toml  requirements.txt
mausify/: main.py
