[tool.poetry]
name = "mausify"
version = "0.0.3"
description = "Wraps cli commands for use in python"
authors = ["fergus <fergusfettes@gmail.com>"]
readme = "README.md"
packages = [{include = "mausify"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
typer = "^0.12.4"
click = "^8.1.3"
rich = "^13.3.5"
click-shell = "^2.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
